--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -1,61 +1,26 @@
 %!TEX root = Property_FW_and_wreath_products.tex
+\label{Section:Median}
 In this section, we will investigate the property FW via the action of groups on median graphs.
+%After recalling the definition of median graphs, we will prove some results 
 
 For $u$ and $v$ two vertices of a connected graph $\mathcal G$, we define the total interval $[u,v]$ as the set of vertices that lies on some shortest path between $u$ and $v$.
 A connected graph $\mathcal G$ is \emph{median} if for any three vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consists of a unique vertex, denoted $m(u,v,w)$.
 A graph is median if each of its connected components is median.
 
-A simple verification shows that if $\mathcal G$ and $\mathcal H$ are both median graphs, then their cartesian product is also median.
+Recall that a group $G$ has property FW if and only if every $G$ action on a connected median graph has bounded orbits.
 
-\todo[inline]{Réfléchir à comment écrire la section. 2 possibilités. 1) Grouper par type de résultat (semi-direct, etc.) ou 2) grouper par ce que se généralise à la propriété P et ce qui est propre au graphe médian.}
-The following example will be fundamental for us.
-\begin{exmp}
-Let $X$ be a set and let  $\mathcal P_f(X)$ be the set of all its finite subsets.
-Define a graph structure on $\mathcal P_f(X)$ by putting an edge between $E$ and $F$ if and only if $\#(E\Delta F)=1$, where $\Delta$ is the symmetric difference.
-Therefore, the distance between two subsets $E$ and $F$ is $E\Delta F$, while $[E,F]$ consist of all subsets of $X$ that both contain $E\cap F$ and are contained in $E\cup F$.
-In particular $\mathcal P_f(X)$ is a connected median graph, with $m(D,E;F)$ being the set of all elements belonging to at least two of $D$, $E$ and $F$. In other words,
-$m(D,E;F)=(D\cap E)\cup(D\cap F)\cup(E\cap F)$.
-
-The same construction endows $\mathcal P(X)$ the set of all subsets of $X$ with a structure of median graph, where the connected component of $E$ consists of all $F$ such that $E\Delta F$ is finite.
-\end{exmp}
-
-The graphs $\mathcal P_f(X)$ are exactly the hypercube and it turns out that every connected median graph is a retract of some $\mathcal P_f(X)$, see \cite{Bandelt1984}.
-
-These graphs will be fundamental for us due to the following fact.
-Any action of a group $G$ on a set $X$ naturally extends to an action of $G$ on $\mathcal P_f(X)$ by graph homomorphisms: $g.\{x_1,\dots,x_n\}=\{g.x_1,\dots,g.x_n\}$.
-
-
-Building on this, we obtain that no infinite sum of groups has the property FW.
-\begin{lem}\label{Lemma:Sum}
-An infinite sum of non-trivial groups $G=\bigoplus_{i=1}^\infty G_i$ does not have FW.
-\end{lem}
-\begin{proof}
-Let $X=\bigsqcup_{i=1}^\infty G_i$.
-There is a natural action of $G$ on $X$: $G_i$ acts by left multiplication on $G_i$ and trivially on $G_j$ for $j\neq i$.
-Therefore, we have an action of $G$ on the connected median graph $\mathcal P_f(X)$.
-For every $i$, choose a non-trivial $g_i\in G_i$.
-Then the orbit of the vertex $\{1_{G_1},\dots, 1_{G_n}\}$ contains the point $\{g_1,\dots, g_n\}$ which is at distance $2n$ of $\{1_{G_1},\dots, 1_{G_n}\}$.
-That is the action of $G$ on $\mathcal P_f(X)$ has unbounded orbits.
-\end{proof}
-
-\begin{lem}\label{Lemma:Subgroup}\todo{Mettre une phrase d'intro; ce n'est pas nouveau}
+We now prove a series of results that will be generalized to a broader context in Section~\ref{Section:Generalizations}.
+The following easy result is folklore, and we provide a proof only for the sake of completeness.
+\begin{lem}\label{Lemma:Subgroup}
 Let $G$ be a group and $H$ be a finite index subgroup.
 If $H$ has FW, then so does~$G$.
 \end{lem}
 \begin{proof}
 Suppose that $G$ does not have FW and let $X$ be a connected median graph on which $G$ acts with unbounded orbits.
-Then $H$ acts on $X$ and every $G$-orbit is a union of at most $[G:H]$ orbit. This directly implies that $H$ acts on $X$ with unbounded orbit and that $H$ does not have FW.
-\end{proof}
-\begin{lem}
-Let $G$ be a group and $H$ be a finite index subgroup.
-If $G$ has FW, then so does~$H$.
-\end{lem}
-\begin{proof}
-Suppose that $H$ does not have FW and let $X$ be a connected median space on which $H$ acts with unbounded orbits.
-Then $G$ acts on $X^{G/H}$ by 
+Then $H$ acts on $X$ and every $G$-orbit is a union of at most $[G:H]$ orbits. This directly implies that $H$ acts on $X$ with unbounded orbit and that $H$ does not have FW.
 \end{proof}
 
-We also have the following easy result on semi-direct products:
+We also have the following lemma on semi-direct products:
 \begin{lem}\label{Lemma:Semidirect}
 Let $G=N\rtimes H$ be a semidirect product. Then
 \begin{enumerate}
@@ -87,15 +52,68 @@ If $G$ and $H$ have FW and $H$ acts on a finite set $X$, then $G\wr_X H$ has FW.
 \end{cor}
 
 
-It also follows from Lemmas \ref{Lemma:Sum} and \ref{Lemma:Semidirect} that
-\begin{cor}
+
+
+
+
+
+We now turn back our attention on results that will rely more on the fact that we are using median graphs.
+
+Trees are the simplest examples of median graphs and a simple verification shows that if $\mathcal G$ and $\mathcal H$ are both median graphs, then their cartesian product is also median.
+On the other hand, the following example will be fundamental for us.
+\begin{exmp}\label{Ex:MainMedian}
+Let $X$ be a set and let  $\mathcal P_f(X)$ be the set of all its finite subsets.
+Define a graph structure on $\mathcal P_f(X)$ by putting an edge between $E$ and $F$ if and only if $\#(E\Delta F)=1$, where $\Delta$ is the symmetric difference.
+Therefore, the distance between two subsets $E$ and $F$ is $E\Delta F$, while $[E,F]$ consist of all subsets of $X$ that both contain $E\cap F$ and are contained in $E\cup F$.
+In particular $\mathcal P_f(X)$ is a connected median graph, with $m(D,E;F)$ being the set of all elements belonging to at least two of $D$, $E$ and $F$. In other words,
+$m(D,E;F)=(D\cap E)\cup(D\cap F)\cup(E\cap F)$.
+
+The same construction endows $\mathcal P(X)$ the set of all subsets of $X$ with a structure of median graph, where the connected component of $E$ consists of all $F$ such that $E\Delta F$ is finite.
+\end{exmp}
+
+The graphs $\mathcal P_f(X)$ are exactly the hypercube and it turns out that every connected median graph is a retract of some $\mathcal P_f(X)$, see \cite{Bandelt1984}.
+
+These graphs will be fundamental for us due to the following fact.
+Any action of a group $G$ on a set $X$ naturally extends to an action of $G$ on $\mathcal P_f(X)$ by graph homomorphisms: $g.\{x_1,\dots,x_n\}=\{g.x_1,\dots,g.x_n\}$.
+
+Building on Example~\ref{Ex:MainMedian}, we obtain that no infinite sum of groups has the property FW.
+\begin{lem}\label{Lemma:Sum}
+An infinite sum of non-trivial groups $G=\bigoplus_{i=1}^\infty G_i$ does not have FW.
+\end{lem}
+\begin{proof}
+Let $X=\bigsqcup_{i=1}^\infty G_i$.
+There is a natural action of $G$ on $X$: $G_i$ acts by left multiplication on $G_i$ and trivially on $G_j$ for $j\neq i$.
+Therefore, we have an action of $G$ on the connected median graph $\mathcal P_f(X)$.
+For every $i$, choose a non-trivial $g_i\in G_i$.
+Then the orbit of the vertex $\{1_{G_1},\dots, 1_{G_n}\}$ contains the point $\{g_1,\dots, g_n\}$ which is at distance $2n$ of $\{1_{G_1},\dots, 1_{G_n}\}$.
+That is the action of $G$ on $\mathcal P_f(X)$ has unbounded orbits.
+\end{proof}
+
+As a direct corollary of Lemmas \ref{Lemma:Sum} and \ref{Lemma:Semidirect}, we obtain
+\begin{cor}\label{Cor:Sum}
 The group $\otimes_X G$ has FW if and only if $X$ is finite and $G$ has FW.
 \end{cor}
 
-We finally characterize which wreath products do have FW.
+
+We also have a converse of Lemma~\ref{Lemma:Subgroup}.
+\begin{lem}\label{Lemma:Subgroup2}
+Let $G$ be a group and $H$ be a finite index subgroup.
+If $G$ has FW, then so does~$H$.
+\end{lem}
+\begin{proof}
+Suppose that $H$ does not have FW and let $X$ be a connected median space on which $H$ acts with unbounded orbits.
+This induces an action of $G$ on $X^{G/H}$ by\todo{Finish the proof}
+\end{proof}
+
+
+
+
+
+
+
+We finally characterize which wreath products do have FW and hence provide a proof of Theorem~\ref{Thm:Main}.
 \begin{prop}\label{Prop:Median}
-Let $G$ be a non-trivial group.
-Then the group $G\wr_X H$ has FW if and only if both $G$ and $H$ have FW and $X$ is finite.
+Let $G,H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has the property FW if and only if $G$ and $H$ have the property FW and $X$ is finite.
 \end{prop}
 \begin{proof}
 In view of Corollary~\ref{Cor:Wreath} it remains to show that if $G\wr_X H$ has FW, then $G$ has FW and $X$ is finite.
@@ -115,7 +133,7 @@ Indeed, it contains
 	\{(\delta_{x}^g,1).(y,\{x\})=(g.y,\{x\})\,|\,g\in G\},
 \]
 where $\delta_{x}^g(x)=g$ and $\delta_{x}^g(z)=1$ if $z\neq x$. 
-And since all the $\{g.y,\{x\}\}_{g\in G}$ are in the same slice, the distance between them in the same as the distance between the $\{g.y\}_{g\in G}$.
+And since all the $\{g.y,\{x\}\}_{g\in G}$ are in the same slice, the distance between them is the same as the distance between the $\{g.y\}_{g\in G}$.
 
 Finally, suppose that $X$ is infinite and let $g$ be a non-trivial element of $G$.
 Then $G$ acts naturally on the connected median graph $P_f(\bigsqcup_XG)$ and therefore $G\wr_X H$ acts on $\mathcal P_f(\bigsqcup_XG)\times \mathcal P_f(X)$.
@@ -124,14 +142,60 @@ The orbit of $v$ contains the point $(\{g_1,\dots, g_n\},\emptyset)$ which is at
 That is the action of $G\wr_X H$ on $\mathcal P_f(\bigsqcup_XG)\times \mathcal P_f(X)$ has unbounded orbits and $G\wr_X H$ has not FW.
 \end{proof}
 
-We conclude this section by the following important remark that some of the above results apply in a more general context.
-\begin{rem}
-Let Q be a property of metric spaces (for example \emph{be a connected median graph}) and P be the group property: \emph{Every $G$-action on a space with Q has bounded orbits.}
-Then Lemmas \ref{Lemma:Subgroup} and \ref{Lemma:Semidirect} as well as Corollary \ref{Cor:Wreath} are true for groups with P.
 
-Example of such properties P are: property FW, property FA (every action on a tree has bounded orbits) or property FH (every isometric action on a real Hilbert space has bounded orbits) which for countable group is equivalent to Kazdhan's property (T).
-\end{rem}
-For other such properties, we have the following results in the same spirit as the Proposition \ref{Prop:Median}.
+
+
+
+
+\section{Related concepts and generalizations}\label{Section:Generalizations}
+This short section is devoted to generalize some of the results of Section~\ref{Section:Median} as well as to presente some properties related to the FW property.
+
+Property FW does not stand alone and there are other similar properties that are of great interest.
+\begin{defn}\label{Def:FHFA}
+Let $G$ be a group.
+It is said to have \emph{property SB} if any action on a metric space has bounded orbits.
+It has \emph{property FH} if any action on a real Hilbert space has bounded orbits and \emph{property FA} if any action on a tree has bounded orbits.
+Finally, $G$ is said to have (cofinality$\neq\omega$) if any action on a ultrametric space has bounded orbits.
+\end{defn}
+For countable groups (and more generally for $\sigma$-compact locally compact groups), property FH is equivalent to the celebrated Kazdhan's property (T) by the Delorme-Guichardet theorem, see for example \cite{MR2415834}, but this is not true in general \cite{MR2240370}.
+\todo[inline]{Maybe expand a little more, or at least give some references}
+The names FH, FW and FA come from the fact that this property admit a description in terms of existence of a Fixed point for action on Hilbert spaces, on spaces with Walls and on trees (\emph{Arbres} in french).
+On the other hand, SB stands for Strongly Bounded and is sometimes called the Bergman property, while a group has cofinality$\neq\omega$ if and only if it cannot be written has an increasing union of proper subgroups.
+
+We have the following strict implications \cite{MR1432323,MR0476875 ,MR3299841,2013arXiv1302.5982C}
+\[
+\textnormal{SB}\implies \textnormal{FH}\implies \textnormal{FW}\implies \textnormal{FA}\implies(\textnormal{cofinality}\neq\omega).
+\]
+
+It is possible to define other properties in the spirit of Definition~\ref{Def:FHFA}.
+Let P be a property of metric spaces (for example \emph{be a connected median graph}) and BP be the group property: \emph{Every $G$-action on a space with P has bounded orbits}, where a $G$-action is supposed to ``preserve the P-structure''.
+Lemmas \ref{Lemma:Subgroup} and \ref{Lemma:Semidirect} as well as Corollary \ref{Cor:Wreath} as well as their proofs remain true for groups with property BP.
+
+On the other hand, the other results of Section~\ref{} require a specific construction and do not generalize straightforward to groups with property BP.
+Nevertheless, it is possible to extract the main ingredients of the proof and to adapt them in some specific cases.
+We will now give a raw outline of this process, but let the details to the interested reader.
+
+\todo[inline]{Réécrire correctement ce qui suit. Veux-t-on parler de foncteurs ?}
+In order to generalize Example~\ref{Ex:MainMedian}, we will need to construct from a $G$ action on a set $X$ a $G$ action on a P-space $Y$.
+More precisely, we say that it is \emph{possible to extend $G$ actions to P-spaces} if there is a $G$-equivariant map $i$ that associate to every $G$-set $X$ a P-space $Y$ endowed with a $G$ action and a $G$-equivariant map $\iota\colon X\hookrightarrow Y$.
+For connected median graphs we took $Y=\mathcal P_f(X)$ in Example~\ref{Ex:MainMedian}, while for real Hilbert spaces it is possible to take $Y$ to be the real Hilbert space generated by $X$. That is, 
+\[Y=\ell^2(X)=\bigg\{f\colon X\to \mathbf R\,\bigg|\, \sum_{x\in X}f(x)^2<\infty\bigg\}.\]
+For property SB, we can take $Y$ to be  $\mathcal P_f(X)$ or $\ell^2(X)$, as well as many other possibilities.
+In the context of trees, is is possible to take $Y=X\sqcup\{*\}$ with for every $x\in X$ an edge between $x$ and $*$, while fo ultrametric spaces it is always possible to take $Y=X$ with the discrete metric.
+
+Let P be a property such that $G$ actions extend to P-spaces.
+%We would like to generalize Lemma \ref{Lemma:Sum} and Corollary \ref{Cor:Sum} to groups with property BP.
+Observe that the map $\iota\colon X\hookrightarrow Y$ naturally extends to $\iota_*\colon \mathcal P_f(X)\hookrightarrow \mathcal P_f(Y)$, where $\iota_*(\{x_1,\dots,x_n\})=\{\iota(x_1),\dots,\iota(x_n)\}$.
+Define
+\[d_n\coloneqq\inf\{d(\iota_*(\{x_1,\dots,x_n\}),\iota_*(\{y_1,\dots,y_n))\,|\,\{x_1,\dots,x_n\}\cap\{y_1,\dots,y_n\}=\emptyset \}\]
+\todo[inline]{Regarder comment écrire correctement la condition pour que le lemme \ref{Lemma:Sum} fonctionne.}
+We will say that P is a property such that $G$ actions extend \emph{unboundedly} to P-spaces if
+
+\todo[inline]{Vérifier ce qui suit. Écrire le thm pour les SB spaces et regarder pour des références (Cornulier)}
+On the other hand, Lemma~\ref{Lemma:Subgroup2} only need that a product of two P-spaces is still a P-space, which holds for real Hilbert spaces, but once again fails for trees.
+
+Finally, Proposition~\ref{Prop:Median} needs both that a product of two P-spaces is still a P-space and that is is possible to extend $G$ actions to P-spaces.
+In particular, we have
 \begin{prop}
 Let $G,H$ be discret groups and $X$ a $H$-set. Then the wreath product $G \wr_X H$ has the property (FH) if and only if $G$ and $H$ have the property (FH) and if $X$ is finite
 \end{prop}
