--- a/Property FW and wreath products/Property_FW_and_wreath_products.tex
+++ b/Property FW and wreath products/Property_FW_and_wreath_products.tex
@@ -21,7 +21,7 @@
 \usepackage{todonotes} %ajouter des commentaires
 %\usepackage[disable]{todonotes}%cache les commentaires
 \usepackage{datetime} %ajoute la date et l'heure
-%\usepackage{here} % permet d'utilser H, h pour place les figures
+\usepackage{here} % permet d'utilser H, h pour place les figures
 %
 %
 \usepackage{tikz}
