--- a/Property FW and wreath products/Ends.tex
+++ b/Property FW and wreath products/Ends.tex
@@ -29,7 +29,7 @@ Let $G$ and $H$ be groups and $X$ be a $H$-set. The wreath product $G \wr_X H$ i
 Suppose that $G$ and $H$ are finitely generated and that the number of orbits is finite. Let $S$ be a finite generating set of $G$, $S'$ a finite generating set of $H$ and $\{x_0, \ldots, x_n \}$ a representative system of the orbits. For $s$ in $S$ and $x$ in $X$, we define $\delta_x^s$ as
 %
 \begin{equation*}
-\delta_{x}^s (y) = \begin{cases} e_G & y \neq x \\ s 	& y = x \end{cases}.
+\delta_{x}^s (y) = \begin{cases} e_G & y \neq x \\ s 	& y = x. \end{cases}
 \end{equation*}
 %
 It is straightforward to prove that the set 
