--- a/Property FW and wreath products/Property_FW_and_wreath_products.tex
+++ b/Property FW and wreath products/Property_FW_and_wreath_products.tex
@@ -64,6 +64,7 @@
 \DeclareMathOperator\GL{GL}		%groupe linéaire
 \DeclareMathOperator\im{im}
 \DeclareMathOperator\id{Id}
+\DeclareMathOperator\Ind{Ind}
 \DeclareMathOperator\orbite{O}
 \DeclareMathOperator\ppcm{ppcm}
 \DeclareMathOperator\pgcd{pgcd}
@@ -80,7 +81,6 @@
 \newcommand*{\iso}{\cong}% isomorphisme,commande sémantique (\simeq ou \cong)
 \renewcommand*{\H}{\mathcal{H}}
 \renewcommand*{\phi}{\varphi}
-%
 \renewcommand*{\S}{\mathcal{S}}
 
 \newcommand*{\field}[1]{\mathbf{#1}}
@@ -89,6 +89,9 @@
 \newcommand*{\Q}{\field{Q}}
 \newcommand*{\R}{\field{R}}
 \renewcommand*{\C}{\field{C}}
+\newcommand*{\powerset}[1]{\mathcal P(#1)}
+\newcommand*{\powersetf}[1]{\mathcal P_{\textnormal{f}}(#1)}
+\newcommand*{\powersetcof}[1]{\mathcal P_{\textnormal{cof}}(#1)}
 %
 %!TEX encoding = UTF-8 Unicode
 %
